// user.proto
syntax = "proto3";

option go_package = "/userpb";

package user;

service UserService {
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse) {}
  rpc GetUser(GetUserRequest) returns (GetUserResponse) {}
}

message CreateUserRequest {
  string username = 1;
  string account = 2;
  string password = 3;
}

message CreateUserResponse {
  uint32 id = 1;
}

message GetUserRequest {
  uint32 id = 1;
}

message GetUserResponse {
  uint32 id = 1;
  string username = 2;
  string account = 3;
}